<resources>
    <string name="app_name">GameStudio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_logo">GameStudio Logo</string>"

    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="Usuario_o_correo">Usuario o correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Confirmar_contraseña">Confirmar contraseña</string>"

    <string name="Olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="Ingresar">Ingresar</string>

    <string name="No_cuenta">¿No tienes una cuenta?</string>
    <string name="Registrate">Registrate</string>

    <string name="Crear_cuenta">Crear Cuenta</string>
    <string name="Registrarse">Únete y empieza tu aventura</string>
    <string name="Desc">Flecha de regreso</string>

    <string name="my_account">Mi cuenta</string>
    <string name="user">Usuario</string>
    <string name="full_name">Nombre completo</string>
    <string name="items_in_list">Juegos guardados</string>
    <string name="saved_titles">en tu biblioteca</string>
    <string name="personal_info_header">Información personal</string>
    <string name="cellphone">Teléfono</string>
    <string name="tap_to_edit">Toca para editar</string>
    <string name="settings">Configuración</string>
    <string name="settings_desc">Notificaciones, seguridad, idioma</string>
    <string name="logout">Cerrar sesión</string>

    <string name="searchbar_hint">Buscar juegos..."</string>
    <string name="Next">Siguiente</string>
    <string name="Previous">Anterior</string>

</resources>